Set `--enable-preview` in jvmArgs
See https://github.com/elastic/elasticsearch/issues/90526 for context